# total_bankroll

./: .env.production.clean  .env_production  .flake8  .gitignore  EMERGENCY_DIAGNOSTIC.md  GEMINI.md  LICENSE  PRODUCTION_FIX_GUIDE.md  PRODUCTION_FIX_QUICK.md  README.md  T6_implementation.md  backup_sh.sh  bankroll.db  bankroll.sql  cash_stakes_table.md  check_production.sh  clean_styles.py  current.txt  database_dev_v_prod.md  dev_structure.md  env.txt  env_development.txt  find_unused_css.py  fix_production.sh  full_css_report.txt  future_qs_for_grok.md  grok_articles.md  grok_automated_seeding.md  grok_fix_seed_articles.md  grok_html_articles.md  improved_css.py  latest_grok_response.md  package-lock.json  package.json  previous_grok_response.md  prod_structure.md  purpose_of_wsgi.md  pyproject.toml  python_anywhere_env.txt  redundant_css.py  (+25 more)
.github/: TASK-0007_ADJUSTED_PROCEDURE.md  TASK-0007_EXECUTION_GUIDE.md  TASK-0007_FINAL_REPORT.md  TASK-0007_QUICK_CHECKLIST.txt  TASK-0007_rollback_test.md  deployment_checklist.md
.github/workflows/: close-task-on-commit.yml  python-ci.yml
.specify/memory/: PHASE_2_COMPLETION_SUMMARY.md  PROGRESS_SUMMARY.md  TASK-1002-completion.md  TASK-1002-production-deployment.md  TASK-1003-completion.md  TASK-1003-production-deployment.md  TASK-1004-completion.md  TASK-1006-completion.md  TASK-2002-completion.md  TASK-2005_COMPLETION_REPORT.md  TASK-2005_FINAL_SUMMARY.md  TASK-3001-COMPLETION.md  TASK-3001-DEPLOYMENT-GUIDE.md  TASK-3001-RESEARCH.md  TASK-3001-SUMMARY.md  TASK-3002-COMPLETION.md  TASK-3002-DEPLOYMENT-GUIDE.md  TASK-3002-EMERGENCY-FIX.md  TASK-3002-HOTFIX-DEPLOYMENT.md  TASK-3002-PRODUCTION-FIX.md  constitution.md  github_automation_guide.md  plan.md  specification.md  tasks.md
css_analysis_output/: css_1050.txt  css_200.txt  css_300.txt  css_500.txt  css_600.txt  css_670.txt
info/: git pull issues.md  google_gemini_cli.md
migrations/: alembic.ini  env.py
migrations/versions/: 16f6f1c7e19f_add_article_and_topic_models.py  1e063a8cc9f8_add_performance_indexes_for_common_.py  28d060ce6615_.py  2b461a823f18_add_default_currency_to_user_model.py  4b257b0997ff_.py  5e19a2149a34_add_display_order_to_sites_table.py  61749658ada6_add_2fa_fields_to_user_model.py  950f03702bdb_.py  a092fcdc2ff5_.py  be7d467170ba_.py  ce9c7ec16148_.py  d064108bb1f6_add_display_order_to_assets.py  dc3f1b4ff245_remove_withdrawn_at_and_deposited_at_.py  e9c441c44865_.py  f3e59f037f69_.py  f4f52aa82318_remove_deposited_at_column_from_deposits.py  f6fdbd380445_.py
resources/: Procedure for Deploying Flask App Changes from Local Development to PythonAnywhere Production.md  help_article.md  privacy_policy.md
resources/articles/: .~lock.Poker Cash Game Bankroll Management: A Comprehensive Guide.odt#  .~lock.bankroll_dropdown_boxes.csv#  Poker Cash Game Bankroll Management: A Comprehensive Guide.odt  bankroll_dropdown_boxes.csv  bankroll_management_rules.csv  bankroll_management_rules.ods  hud_stats_by_player_type.html  hud_stats_by_player_type.ods
resources/articles/markdown/: A-Guide-to-Poker-Bankroll-Management.md  (+56 more)
resources/future_developments/: Poker Variance Simulator: Detailed Requirements Specification.md  bug_fix.md  business_models.md  css_file_organisation.md  custom_domain_name.md  gamify.md  grok_suggestions_sept29.md  hostinger_web_setup.md  migrating_to_production.md  poker_variance_technical_doc.md  poker_variance_tool_updated_spec.md  pythonanywhere_hacker_capacity.md  scrape_web_for_tournament_info  url_address_summary_grok.md  url_addresses.md  urls_from_gemini.md  web_hosting_options.md  web_hosting_recommendation.md  wsgi_backup.py
resources/policies/: Terms of Service for StakeEasy.md
resources/swatches/: RGB.md  mp8sjXicu5meUVJSUGylr5-al1xUWVCSmqJbkpRnoJdeXJJYkpmsl5yfq5-Zm5ieWmxfaAuUsXL0S7F0Tw7M9yhOtoz3THUucAzKLjXKdXEqrijID_FzLSkvMq0MzDTKKg8JMdZ1zCtKVyu2NTQAACBuJao
resources/useful_scripts/: _parse_json_hand_strengths.py  hand_strength_all.json  monte_carlo_plo_hand_eval.py  redundant_css.py  tier_names.py  verify_simulations.py
scripts/: README_github_issues.md  README_task_completion.md  check_env_parity.py  close_github_issue.py  create_github_issues.py  deploy.sh  emergency_fix_production_env.sh  fix_production_env.sh  fix_production_env_simple.sh  prepare_plo_range_data.py  prepare_rankings_data.py  pythonanywhere_setup_backup.sh  recover_data.py  seed_articles_from_markdown.py  setup_backup_dir.sh  sort_hand_data.py  task_complete.sh
src/total_bankroll/: __init__.py  achievements.py  app.py  commands.py  config.py  convert_articles.py  currency.py  data_utils.py  db.py  extensions.py  main.py  models.py  oauth.py  purge_articles.py  recommendations.py  schema.sql  schema_postgres.sql  seed_achievements.py  seed_articles.py  utils.py  vite_asset_helper.py
tests/: conftest.py  factories.py  test_basic.py  test_data.csv  test_eval_plo_hand_strength.py  test_export_database.py  test_forms.py  test_monte_carlo_verification.py  test_routes_tools.py
tests/services/: __init__.py  test_achievement_service.py  test_bankroll_service.py  test_recommendation_service.py  test_service_suite.py  test_services.py
(+294 files in other folders)
