[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "total_bankroll"
version = "0.1.0"
description = "Keeps a track of total poker bankroll, including funds on each site, cash and other assets."
authors = [{ name = "pythonpydev", email = "pythonpydev1@gmail.com" }]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "Flask-Bcrypt",
    "Flask-Dance[sqla]",
    "Flask-Limiter",
    "Flask-Mail",
    "Flask-Migrate",
    "Flask-Security-Too[common,email]",
    "Flask-WTF",
    "PyMySQL",
    "python-dotenv",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/pythonpydev/total_bankroll"
Repository = "https://github.com/pythonpydev/total_bankroll"

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"

[project.optional-dependencies]
test = [
    "pytest",
]